--- a/WebUI/Views/User/MainPage.cshtml
+++ b/WebUI/Views/User/MainPage.cshtml
@@ -20,8 +20,8 @@ else
     </figure>
     <div class="menu">
         <div class="form-group">
-            <button class="btn btn-success btn-block" type="button"> Добавить фото </button>
-            <button class="btn btn-success btn-block" type="button"> Альбомы </button>
+           <a href="Photo/Albums?userId=@Model.UserID">photo</a>
+            @*@Html.ActionLink("photo", "Albums", "Photo", new {userId= Model.UserID})*@
             <button class="btn btn-success btn-block" type="button"> Мои друзья </button>
             <button class="btn btn-success btn-block" type="button"> Настройки </button>
             <button class="btn btn-success btn-block" type="button"><i class="fa fa-sign-out"></i> Выйти </button>
