i add oportunity to add photo
also i add data in database, luck bro

--- a/WebUI/Views/Photo/Albums.cshtml
+++ b/WebUI/Views/Photo/Albums.cshtml
@@ -9,3 +9,6 @@
 {
     @ph.Name;
 }
+
+@*@Html.ActionLink("new", "AddNewPhoto", "Photo", new {userId=ViewBag.UserID })*@
+<a href="AddNewPhoto?userId=@ViewBag.UserID">new</a>
