--- a/WebUI/Views/User/MainPage.cshtml
+++ b/WebUI/Views/User/MainPage.cshtml
@@ -20,7 +20,13 @@ else
     </figure>
     <div class="menu">
         <div class="form-group">
-           <a href="Photo/Albums?userId=@Model.UserID">photo</a>
+           @*<a href="Photo/Albums?userId=@Model.UserID">photo</a>*@
+                @Html.RouteLink("photo", new
+           {
+               controller = "Photo",
+               action = "Albums",
+               userId = Model.UserID
+           })
             @*@Html.ActionLink("photo", "Albums", "Photo", new {userId=Model.UserID})*@
             <button class="btn btn-success btn-block" type="button"> Мои друзья </button>
             <button class="btn btn-success btn-block" type="button"> Настройки </button>
