--- a/WebUI/Views/Photo/Albums.cshtml
+++ b/WebUI/Views/Photo/Albums.cshtml
@@ -4,6 +4,7 @@
 
     ViewBag.Title = "Albums";
     Layout = "~/Views/Shared/_LayoutForPhoto.cshtml";
+    
 }
 
 
@@ -25,14 +26,7 @@
                         <img src="~/Img/sampleuser@gmail.com.png" />
                     </a>
                 </div>*@
-              <div class="mosaicflow__item">
-                        @Html.Raw("<a class=\"fancyimage \" rel=\"group\"  href=\"data:image/jpeg;base64,"
-                                + Convert.ToBase64String(ph.ImageData) + "\" title=\""+ph.Name+"\"/>")
-                        @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                + Convert.ToBase64String(ph.ImageData) + "\" />")
-                                @Html.Raw("</a>")
-                    
-                </div>
+            Html.RenderPartial("Shared/PhotoSummary", ph);
 
         }
         </div>
