--- a/WebUI/Views/Photo/Shared/PhotoSummary.cshtml
+++ b/WebUI/Views/Photo/Shared/PhotoSummary.cshtml
@@ -6,5 +6,6 @@
     @Html.Raw("<img src=\"data:image/jpeg;base64,"
                                 + Convert.ToBase64String(Model.ImageData) + "\" />")
     @Html.Raw("</a>")
+    <a href="#">delete</a>
 
 </div>
