make btn for "delete" and "edit"

--- a/WebUI/Content/Style.css
+++ b/WebUI/Content/Style.css
@@ -23,3 +23,5 @@ img[alt="Фото по умалчение"]
 {
     align-self: center;
 }
+.editor-field { margin-bottom: .8em; }
+.editor-label { font-weight: bold; }
