--- a/WebUI/Views/Photo/Edit.cshtml
+++ b/WebUI/Views/Photo/Edit.cshtml
@@ -34,9 +34,9 @@
         </div>
        
         <div class="form-group">
-            <label class="col-sm-2 control-label">Аватарка</label>
+            <label class="col-sm-2 control-label">Фото</label>
             <div class="col-sm-10">
-                <input type="file" name="Image" />
+                <input type="file" name="Загрузить новое фото" />
             </div>
         </div>
         <input type="submit" value="Save" />
