--- a/WebUI/Views/Shared/_LayoutForPhoto.cshtml
+++ b/WebUI/Views/Shared/_LayoutForPhoto.cshtml
@@ -17,10 +17,10 @@
     <script src="~/Scripts/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="~/Scripts/jquery.fancybox.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.fancybox.pack.js"></script>
-    <script src="~/Scripts/jquery.fancybox-thumbs.js" type="text/javascript"></script>
+    @*<script src="~/Scripts/jquery.fancybox-thumbs.js" type="text/javascript"></script>
     <script src="~/Scripts/jquery.fancybox-media.js" type="text/javascript"></script>
     <script src="~/Scripts/jquery.fancybox-thumbs.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.fancybox-buttons.js" type="text/javascript"></script>
+    <script src="~/Scripts/jquery.fancybox-buttons.js" type="text/javascript"></script*@>
     <script src="~/Scripts/jquery.mosaicflow.min.js" type="text/javascript"></script>
     <script src="~/Scripts/bootstrap.min.js" type="text/javascript"></script>
 
@@ -60,7 +60,11 @@
             }
     </style>
 
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("a.fancyimage").fancybox();
+        });
+    </script>
 </head>
 
 <body>
@@ -98,13 +102,11 @@
                 </ul>
             </div>
         </div>
+
+
     <!--Навигационное панель-->
             @RenderBody()
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("a.fancyimage").fancybox();
-        }); 
-    </script>
+ 
 
    
     @*<script src="~/scripts/jquery.fancybox.js"></script>
@@ -123,7 +125,11 @@
         });
     </script>*@
 
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("a.fancyimage").fancybox();
+        });
+    </script>
 </body>
 
 </html>
