--- a/WebUI/Views/Photo/Edit.cshtml
+++ b/WebUI/Views/Photo/Edit.cshtml
@@ -6,7 +6,7 @@
     
 }
 
-<center><h2>Работа с фотом</h2></center>
+<center><h2>Работа с фото</h2></center>
 <div class="form-horizontal">
     @using (Html.BeginForm("Edit", "Photo",
     FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -33,12 +33,12 @@
             </div>
         </div>
        
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Фото</label>
-            <div class="col-sm-10">
-                <input type="file" name="Загрузить новое фото" />
+            <div class="form-group">
+            <label  class="col-sm-2 control-label">Фото</label>
+             <div class="col-sm-10">
+                 <input type="file" name="Image" />
             </div>
-        </div>
+         </div>
         <input type="submit" value="Save" />
 
     }
