--- a/WebUI/Views/Shared/_LayoutForPhoto.cshtml
+++ b/WebUI/Views/Shared/_LayoutForPhoto.cshtml
@@ -20,7 +20,7 @@
     @*<script src="~/Scripts/jquery.fancybox-thumbs.js" type="text/javascript"></script>
     <script src="~/Scripts/jquery.fancybox-media.js" type="text/javascript"></script>
     <script src="~/Scripts/jquery.fancybox-thumbs.js" type="text/javascript"></script>
-    <script src="~/Scripts/jquery.fancybox-buttons.js" type="text/javascript"></script*@>
+    <script src="~/Scripts/jquery.fancybox-buttons.js" type="text/javascript"></script>*@
     <script src="~/Scripts/jquery.mosaicflow.min.js" type="text/javascript"></script>
     <script src="~/Scripts/bootstrap.min.js" type="text/javascript"></script>
 
@@ -103,7 +103,11 @@
             </div>
         </div>
 
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $("a.fancyimage").fancybox();
+        });
+    </script>
     <!--Навигационное панель-->
             @RenderBody()
  
@@ -125,11 +129,7 @@
         });
     </script>*@
 
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $("a.fancyimage").fancybox();
-        });
-    </script>
+  
 </body>
 
 </html>
